<resources>
    <string name="app_name">Golf Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_regular_score_page">RegularScorePageActivity</string>
    <string name="scoresheet_button">New Scoresheet</string>
    <string name="my_golf_courses_button">My Golf Courses</string>
    <string name="my_minigolf_courses_button">My Mini-Golf Courses</string>
    <string name="hole_number_title">Hole #</string>
    <string name="par_number_title">Par #</string>
    <string name="stroke_number_title">Stroke #</string>
    <string name="submit_button">Submit</string>
    <string name="save_as_new_course_button">Save as New Course</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_my_golf_courses">MyGolfCoursesActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="title_activity_new_course_name">newCourseNameActivity</string>
    <string name="title_activity_regular_page">RegularPageActivity</string>
    <string name="title_activity_results_page">ResultsPageActivity</string>
    <string name="title_activity_unique_score_page">UniqueScorePageActivity</string>
</resources>
