<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:textColor="#28ED47"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/appTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/scoresheet_button"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/scoresheet_button"
        android:id="@+id/scoreSheetButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:background="@drawable/course_buttons"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/my_golf_courses_button"
        android:id="@+id/myGolfCoursesButton"
        android:layout_below="@+id/scoreSheetButton"
        android:layout_alignStart="@+id/scoreSheetButton"
        android:layout_marginTop="35dp" />

</RelativeLayout>
